2010-07-29  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Don't run waitidle if we exited because of a theme change.

	* src/hildon-home.c (main):
	  Rename the stamp file and check for it too on startup
	  when deciding about enabling waitidle.

2010-07-29  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Make waitidle compatible with libhildondesktop 2.1.42,
	and disable it by default.  This allows for independent
	releasing of hildon-home with the waitidle feature and
	libhildondesktop with the necessary enablers.

	* src/hildon-home.c:
	  Recognize the Waitidle::enabled configuration parameter.
	* src/home.conf.in:
	  Move comments around.
	* src/hd-task-shortcut.c (hd_task_shortcut_desktop_file_changed_cb):
	  Check the existence of the "throttled" property before getting
	  its value to prevent the emission of warnings.

2010-07-08  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Release 0.3.70-1.

2010-07-07  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#162298 hildon-sv-notification-daemon memory leak during long chat.

	* src/hd-sv-notification-daemon.c (hd_sv_notification_daemon_stop_event):
	  Free the invocation context.

2010-06-21  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#137880 Selecting bookmark is slow to launch site, resulting
		  in multiple clicks and multiple browser instances

	Don't show the widgets as long as the load is high.
	Configurable via /etc/hildon-desktop/home.conf.
	Also initiate the application-loading transition rather than
	waiting for the application when opening a web bookmark.

	* debian/control:
	  Depend on new version of libhildondesktop.
	* src/home.conf.in:
	  New configuration settings.
	* src/hd-applet-manager.c (plugin_added_cb):
	  If hd_applet_manager_throttled() keep a list of @throttled_plugins
	  and only gtk_widget_show() them when we're ready.
	* src/hd-task-shortcut.c (hd_task_shortcut_desktop_file_changed_cb):
	  Don't show the shortcut if the HDShortcuts is throttled.
	* src/hildon-home.c (waitidle):